crates/readability-core/tests/snapshots/snapshot_tests__html_default.snap
---
source: crates/readability-core/tests/snapshot_tests.rs
expression: result
---
{
  "schema_version": "1.0",
  "request_id": "ce51c61fa101eee9",
  "engine": {
    "formula_version": "1.0.0",
    "tokenizer_version": "1.0.0",
    "syllable_version": "1.0.0",
    "character_count_policy": "ascii_letters",
    "word_lists": {
      "dale_chall": "2024-public-domain",
      "spache": "2024-public-domain"
    }
  },
  "input": {
    "language": "en-US",
    "input_format_detected": "html",
    "bytes": 766,
    "text_hash": "ce51c61fa101eee986729312be7c9d1eeecd88d89c4cd1b733c3ba982ecc87c3",
    "warnings": []
  },
  "stats": {
    "sentences": 8,
    "words": 85,
    "unique_words": 65,
    "letters": 460,
    "ari_characters": 460,
    "graphemes": 572,
    "paragraphs": 5,
    "syllables": 154,
    "polysyllables": 20,
    "complex_words": 20,
    "dale_chall_difficult_words": 19,
    "dale_chall_difficult_percentage": 22.35,
    "spache_unique_unfamiliar_words": 33,
    "spache_unique_unfamiliar_percentage": 50.77,
    "average_words_per_sentence": 10.63,
    "average_syllables_per_word": 1.81,
    "average_characters_per_word": 5.41,
    "longest_sentence_words": 16,
    "type_token_ratio": 0.76,
    "hapax_percentage": 61.18,
    "reading_time_seconds": 21,
    "reading_time_wpm": 238
  },
  "scores": {
    "flesch_reading_ease": {
      "raw": 42.77533088235296,
      "score": 42.78,
      "normalized_0_100": 42.77533088235296,
      "higher_is_easier": true,
      "interpretation": "difficult",
      "valid": true,
      "confidence": "high"
    },
    "flesch_kincaid_grade": {
      "raw": 9.932573529411766,
      "score": 9.93,
      "higher_is_easier": false,
      "grade_band": "10th grade",
      "valid": true,
      "confidence": "high"
    },
    "gunning_fog": {
      "raw": 13.661764705882355,
      "score": 13.66,
      "higher_is_easier": false,
      "grade_band": "college level",
      "valid": true,
      "confidence": "high"
    },
    "coleman_liau": {
      "raw": 13.235294117647054,
      "score": 13.24,
      "higher_is_easier": false,
      "grade_band": "college level",
      "valid": true,
      "confidence": "high"
    },
    "smog": {
      "raw": 12.161744961471694,
      "score": 12.16,
      "higher_is_easier": false,
      "grade_band": "12th grade",
      "valid": true,
      "confidence": "high"
    },
    "automated_readability_index": {
      "raw": 9.371911764705885,
      "score": 9.37,
      "higher_is_easier": false,
      "grade_band": "9th grade",
      "valid": true,
      "confidence": "high"
    },
    "dale_chall": {
      "raw_unadjusted": 4.056529411764706,
      "raw": 7.693029411764706,
      "score": 7.69,
      "grade_band": "9th to 10th grade",
      "grade_midpoint": 9.5,
      "valid": true,
      "confidence": "high"
    },
    "spache": {
      "raw": 6.107701923076923,
      "score": 6.11,
      "higher_is_easier": false,
      "grade_band": "6th grade",
      "valid": true,
      "confidence": "high"
    }
  },
  "primary": {
    "type": "consensus_grade",
    "score": 10.84,
    "label": "11th grade",
    "ease_score": 42.78,
    "ease_label": "difficult",
    "confidence": "low",
    "agreement": {
      "min_grade": 6.107701923076923,
      "max_grade": 13.661764705882355,
      "spread": 7.554062782805432,
      "stability": "low"
    },
    "included_metrics": [
      "flesch_kincaid_grade",
      "gunning_fog",
      "coleman_liau",
      "smog",
      "ari",
      "dale_chall",
      "spache"
    ],
    "summary": "This text is at a 11th grade reading level."
  },
  "warnings": [
    {
      "code": "SHORT_TEXT",
      "message": "Scores are less stable below 100 words.",
      "severity": "INFO"
    },
    {
      "code": "SMOG_SHORT_SAMPLE",
      "message": "SMOG is most reliable on 30 or more sentences.",
      "severity": "WARNING"
    }
  ]
}
