crates/readability-core/tests/snapshots/snapshot_tests__markdown_default.snap
---
source: crates/readability-core/tests/snapshot_tests.rs
expression: result
---
{
  "schema_version": "1.0",
  "request_id": "1327cbed86c3f7cd",
  "engine": {
    "formula_version": "1.0.0",
    "tokenizer_version": "1.0.0",
    "syllable_version": "1.0.0",
    "character_count_policy": "ascii_letters",
    "word_lists": {
      "dale_chall": "2024-public-domain",
      "spache": "2024-public-domain"
    }
  },
  "input": {
    "language": "en-US",
    "input_format_detected": "markdown_lite",
    "bytes": 828,
    "text_hash": "1327cbed86c3f7cd9c7b3125bf17f84255663f6be6e1c0d92592f974386a10e1",
    "warnings": []
  },
  "stats": {
    "sentences": 11,
    "words": 99,
    "unique_words": 82,
    "letters": 539,
    "ari_characters": 539,
    "graphemes": 658,
    "paragraphs": 9,
    "syllables": 173,
    "polysyllables": 19,
    "complex_words": 19,
    "dale_chall_difficult_words": 21,
    "dale_chall_difficult_percentage": 21.21,
    "spache_unique_unfamiliar_words": 37,
    "spache_unique_unfamiliar_percentage": 45.12,
    "average_words_per_sentence": 9.0,
    "average_syllables_per_word": 1.75,
    "average_characters_per_word": 5.44,
    "longest_sentence_words": 12,
    "type_token_ratio": 0.83,
    "hapax_percentage": 73.74,
    "reading_time_seconds": 25,
    "reading_time_wpm": 238
  },
  "scores": {
    "flesch_reading_ease": {
      "raw": 49.8636363636364,
      "score": 49.86,
      "normalized_0_100": 49.8636363636364,
      "higher_is_easier": true,
      "interpretation": "difficult",
      "valid": true,
      "confidence": "high"
    },
    "flesch_kincaid_grade": {
      "raw": 8.540202020202024,
      "score": 8.54,
      "higher_is_easier": false,
      "grade_band": "9th grade",
      "valid": true,
      "confidence": "high"
    },
    "gunning_fog": {
      "raw": 11.276767676767676,
      "score": 11.28,
      "higher_is_easier": false,
      "grade_band": "11th grade",
      "valid": true,
      "confidence": "high"
    },
    "coleman_liau": {
      "raw": 12.924444444444447,
      "score": 12.92,
      "higher_is_easier": false,
      "grade_band": "college level",
      "valid": true,
      "confidence": "high"
    },
    "smog": {
      "raw": 10.63711953065702,
      "score": 10.64,
      "higher_is_easier": false,
      "grade_band": "11th grade",
      "valid": true,
      "confidence": "high"
    },
    "automated_readability_index": {
      "raw": 8.713333333333335,
      "score": 8.71,
      "higher_is_easier": false,
      "grade_band": "9th grade",
      "valid": true,
      "confidence": "high"
    },
    "dale_chall": {
      "raw_unadjusted": 3.7957939393939397,
      "raw": 7.43229393939394,
      "score": 7.43,
      "grade_band": "9th to 10th grade",
      "grade_midpoint": 9.5,
      "valid": true,
      "confidence": "high"
    },
    "spache": {
      "raw": 5.4479999999999995,
      "score": 5.45,
      "higher_is_easier": false,
      "grade_band": "5th grade",
      "valid": true,
      "confidence": "high"
    }
  },
  "primary": {
    "type": "consensus_grade",
    "score": 9.73,
    "label": "10th grade",
    "ease_score": 49.86,
    "ease_label": "difficult",
    "confidence": "low",
    "agreement": {
      "min_grade": 5.4479999999999995,
      "max_grade": 12.924444444444447,
      "spread": 7.476444444444447,
      "stability": "low"
    },
    "included_metrics": [
      "flesch_kincaid_grade",
      "gunning_fog",
      "coleman_liau",
      "smog",
      "ari",
      "dale_chall",
      "spache"
    ],
    "summary": "This text is at a 10th grade reading level."
  },
  "warnings": [
    {
      "code": "SHORT_TEXT",
      "message": "Scores are less stable below 100 words.",
      "severity": "INFO"
    },
    {
      "code": "SMOG_SHORT_SAMPLE",
      "message": "SMOG is most reliable on 30 or more sentences.",
      "severity": "WARNING"
    }
  ]
}
