crates/readability-core/tests/snapshots/snapshot_tests__short_default.snap
---
source: crates/readability-core/tests/snapshot_tests.rs
expression: result
---
{
  "schema_version": "1.0",
  "request_id": "6d67a445d1e5c7d9",
  "engine": {
    "formula_version": "1.0.0",
    "tokenizer_version": "1.0.0",
    "syllable_version": "1.0.0",
    "character_count_policy": "ascii_letters",
    "word_lists": {
      "dale_chall": "2024-public-domain",
      "spache": "2024-public-domain"
    }
  },
  "input": {
    "language": "en-US",
    "input_format_detected": "plain",
    "bytes": 23,
    "text_hash": "6d67a445d1e5c7d98997d412fd71e5eb9a450b2c5f6e206d8511fe1b9009ec90",
    "warnings": []
  },
  "stats": {
    "sentences": 1,
    "words": 6,
    "unique_words": 6,
    "letters": 17,
    "ari_characters": 17,
    "graphemes": 23,
    "paragraphs": 1,
    "syllables": 6,
    "polysyllables": 0,
    "complex_words": 0,
    "dale_chall_difficult_words": 1,
    "dale_chall_difficult_percentage": 16.67,
    "spache_unique_unfamiliar_words": 1,
    "spache_unique_unfamiliar_percentage": 16.67,
    "average_words_per_sentence": 6.0,
    "average_syllables_per_word": 1.0,
    "average_characters_per_word": 2.83,
    "longest_sentence_words": 6,
    "type_token_ratio": 1.0,
    "hapax_percentage": 100.0,
    "reading_time_seconds": 2,
    "reading_time_wpm": 238
  },
  "scores": {
    "flesch_reading_ease": {
      "raw": 116.14500000000001,
      "score": 116.15,
      "normalized_0_100": 100.0,
      "higher_is_easier": true,
      "interpretation": "very easy",
      "valid": true,
      "confidence": "medium"
    },
    "flesch_kincaid_grade": {
      "raw": -1.4499999999999993,
      "score": -1.45,
      "higher_is_easier": false,
      "grade_band": "below 1st grade",
      "valid": true,
      "confidence": "high"
    },
    "gunning_fog": {
      "raw": 2.4000000000000004,
      "score": 2.4,
      "higher_is_easier": false,
      "grade_band": "2nd grade",
      "valid": true,
      "confidence": "high"
    },
    "coleman_liau": {
      "raw": -4.073333333333338,
      "score": -4.07,
      "higher_is_easier": false,
      "grade_band": "below 1st grade",
      "valid": true,
      "confidence": "high"
    },
    "smog": {
      "raw": 3.1291,
      "score": 3.13,
      "higher_is_easier": false,
      "grade_band": "3rd grade",
      "valid": true,
      "confidence": "high"
    },
    "automated_readability_index": {
      "raw": -5.085000000000001,
      "score": -5.09,
      "higher_is_easier": false,
      "grade_band": "below 1st grade",
      "valid": true,
      "confidence": "high"
    },
    "dale_chall": {
      "raw_unadjusted": 2.9292666666666674,
      "raw": 6.565766666666667,
      "score": 6.57,
      "grade_band": "7th to 8th grade",
      "grade_midpoint": 7.5,
      "valid": true,
      "confidence": "high"
    },
    "spache": {
      "raw": 2.751666666666667,
      "score": 2.75,
      "higher_is_easier": false,
      "grade_band": "3rd grade",
      "valid": true,
      "confidence": "high"
    }
  },
  "primary": {
    "type": "consensus_grade",
    "score": 0.55,
    "label": "1st grade",
    "ease_score": 116.15,
    "ease_label": "very easy",
    "confidence": "low",
    "agreement": {
      "min_grade": -5.085000000000001,
      "max_grade": 7.5,
      "spread": 12.585,
      "stability": "low"
    },
    "included_metrics": [
      "flesch_kincaid_grade",
      "gunning_fog",
      "coleman_liau",
      "smog",
      "ari",
      "dale_chall",
      "spache"
    ],
    "summary": "This text is at a 1st grade reading level."
  },
  "warnings": [
    {
      "code": "SHORT_TEXT",
      "message": "Scores are less stable below 100 words.",
      "severity": "INFO"
    },
    {
      "code": "FEW_SENTENCES",
      "message": "Fewer than 3 sentences detected.",
      "severity": "WARNING"
    },
    {
      "code": "NO_SENTENCE_TERMINATOR",
      "message": "Text has words but no terminal punctuation; fallback sentence construction was used.",
      "severity": "INFO"
    },
    {
      "code": "SMOG_SHORT_SAMPLE",
      "message": "SMOG is most reliable on 30 or more sentences.",
      "severity": "WARNING"
    }
  ]
}
